--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
                 <li><a class="opt" href="./lecture_2.3.html" target="ifr">Lecture 2.3</a></li>
             </ul>
         </li>
-        <li class="lectOpt opt"><a href="./lecture_3.html" target="ifr">Lecture 3</a></li>
+        <li class="lectOpt lectList opt">Lecture 3
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_3.1.html" target="ifr">Lecture 3.1</a></li>
+                <li><a class="opt" href="./lecture_3.2.html" target="ifr">Lecture 3.2</a></li>
+                <li><a class="opt" href="./lecture_3.3.html" target="ifr">Lecture 3.3</a></li>
+                <li><a class="opt" href="./lecture_3.4.html" target="ifr">Lecture 3.3</a></li>
+            </ul>
+        </li>
     </ul>
     <div class="container">
         <iframe src="./lecture_1.html" name="ifr" class="ifr" id="ifr" onload="getSource()"></iframe>
