--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <li><a class="opt" href="./lecture_3.4.html" target="ifr">Lecture 3.3</a></li>
             </ul>
         </li>
+        <li class="lectOpt lectList opt">Lecture 4
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_4.1.html" target="ifr">Lecture 4.1</a></li>
+                <li><a class="opt" href="./lecture_4.2.html" target="ifr">Lecture 4.2</a></li>
+            </ul>
+        </li>
     </ul>
     <div class="container">
         <iframe src="./lecture_1.html" name="ifr" class="ifr" id="ifr" onload="getSource()"></iframe>
