--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <li><a class="opt" href="./lecture_4.2.html" target="ifr">Lecture 4.2</a></li>
             </ul>
         </li>
+        <li class="lectOpt lectList opt">Lecture 5
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_5.1.html" target="ifr">Lecture 5.1</a></li>
+                <li><a class="opt" href="./lecture_5.2.html" target="ifr">Lecture 5.2</a></li>
+                <li><a class="opt" href="./lecture_5.3.html" target="ifr">Lecture 5.3</a></li>
+                <li><a class="opt" href="./lecture_5.4.html" target="ifr">Lecture 5.3</a></li>
+            </ul>
+        </li>
     </ul>
     <div class="container">
         <iframe src="./lecture_1.html" name="ifr" class="ifr" id="ifr" onload="getSource()"></iframe>
