--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a class="opt" href="./lecture_3.1.html" target="ifr">Lecture 3.1</a></li>
                 <li><a class="opt" href="./lecture_3.2.html" target="ifr">Lecture 3.2</a></li>
                 <li><a class="opt" href="./lecture_3.3.html" target="ifr">Lecture 3.3</a></li>
-                <li><a class="opt" href="./lecture_3.4.html" target="ifr">Lecture 3.3</a></li>
+                <li><a class="opt" href="./lecture_3.4.html" target="ifr">Lecture 3.4</a></li>
             </ul>
         </li>
         <li class="lectOpt lectList opt">Lecture 4
@@ -38,7 +38,15 @@
                 <li><a class="opt" href="./lecture_5.1.html" target="ifr">Lecture 5.1</a></li>
                 <li><a class="opt" href="./lecture_5.2.html" target="ifr">Lecture 5.2</a></li>
                 <li><a class="opt" href="./lecture_5.3.html" target="ifr">Lecture 5.3</a></li>
-                <li><a class="opt" href="./lecture_5.4.html" target="ifr">Lecture 5.3</a></li>
+                <li><a class="opt" href="./lecture_5.4.html" target="ifr">Lecture 5.4</a></li>
+            </ul>
+        </li>
+                <li class="lectOpt lectList opt">Lecture 6
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_6.1.html" target="ifr">Lecture 6.1</a></li>
+                <li><a class="opt" href="./lecture_6.2.html" target="ifr">Lecture 6.2</a></li>
+                <li><a class="opt" href="./lecture_6.3.html" target="ifr">Lecture 6.3</a></li>
+
             </ul>
         </li>
     </ul>
