--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
                 <li><a class="opt" href="./lecture_5.4.html" target="ifr">Lecture 5.4</a></li>
             </ul>
         </li>
-                <li class="lectOpt lectList opt">Lecture 6
+        <li class="lectOpt lectList opt">Lecture 6
             <ul class="dd">
                 <li><a class="opt" href="./lecture_6.1.html" target="ifr">Lecture 6.1</a></li>
                 <li><a class="opt" href="./lecture_6.2.html" target="ifr">Lecture 6.2</a></li>
                 <li><a class="opt" href="./lecture_6.3.html" target="ifr">Lecture 6.3</a></li>
-
+                <li><a class="opt" href="./lecture_6.4.html" target="ifr">Lecture 6.4</a></li>
+            </ul>
+        </li>
+        <li class="lectOpt lectList opt">Lecture 7
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_7.1.html" target="ifr">Lecture 7.1</a></li>
+                <li><a class="opt" href="./lecture_7.2.html" target="ifr">Lecture 7.2</a></li>
+                <li><a class="opt" href="./lecture_7.3.html" target="ifr">Lecture 7.3</a></li>
             </ul>
         </li>
     </ul>
