--- a/lectures/Sum of numbers.html
+++ b/lectures/Sum of numbers.html
@@ -5,10 +5,12 @@
 </head>
 <body>
 <script type="text/javascript">
-	var a = prompt('Enter a number...')
 
-	for (var i = 1; i <= 10; i++) {
-		document.write(`${a} x ${i} = ${i*a}<br>`)
+	var total = 0
+	for (var i = 1; i <= 100; i++) {
+
+		document.write(i,'<br>')
+		total = total + i
 	}
 	document.write('_________<br>')
 	document.write('Total: ',total)
