--- a/lectures/lecture_7.3.html
+++ b/lectures/lecture_7.3.html
@@ -8,6 +8,8 @@
 	var a = +prompt('Enter a number...')
 	var b = +prompt('Enter another number...')
 	var c = +prompt('One more number, please...')
+		
+	document.write(Math.max(a,b,c))
 
 </script>
 </body>
