--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                 <li><a class="opt" href="./lecture_7.3.html" target="ifr">Lecture 7.3</a></li>
             </ul>
         </li>
+        <li class="lectOpt lectList opt">Lecture 8
+            <ul class="dd">
+                <li><a class="opt" href="./lecture_8.1.html" target="ifr">Lecture 8.1</a></li>
+                <li><a class="opt" href="./lecture_8.2.html" target="ifr">Lecture 8.2</a></li>
+                <li><a class="opt" href="./lecture_8.3.html" target="ifr">Lecture 8.3</a></li>
+                <li><a class="opt" href="./lecture_8.4.html" target="ifr">Lecture 8.4</a></li>
+                <li><a class="opt" href="./lecture_8.5.html" target="ifr">Lecture 8.5</a></li>
+                <li><a class="opt" href="./lecture_8.6.html" target="ifr">Lecture 8.6</a></li>
+            </ul>
+        </li>
     </ul>
     <div class="container">
         <iframe src="./lecture_1.html" name="ifr" class="ifr" id="ifr" onload="getSource()"></iframe>
